--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>webtwinkie.org</title>
+    <title>uniteapprn.com</title>
   </head>
   <body>
-    <p>Hey there, I swiped up this domain but I'm assuming you came from <a href="https://chromium.googlesource.com/chromiumos/twebkie/+/refs/heads/dnschneid/README.md">here</a> and are intending to go to <a href="https://chromium.googlesource.com/chromiumos/twebkie/+/refs/heads/dnschneid/README.md">here</a>.</p>
-    <p>However, at the time of writing this, the second link leads to an XML file with an error message</p>
-    <p>This is hosted on a GitHub repository here: <a href="https://github.com/CyberFlameGO/webtwinkie.org">https://github.com/CyberFlameGO/webtwinkie.org</a>.
+    <p>Hey there, I swiped up this domain. As you're probably aware, this domain is the groupId for the Android NZ Covid Tracer app.
+    <p>The code for said app is located <a href="https://github.com/minhealthnz/nzcovidtracer-app">here</a></p>
+    <p>This site is hosted on a GitHub repository here: <a href="https://github.com/CyberFlameGO/uniteapprn.com">https://github.com/CyberFlameGO/uniteapprn.com</a>.
   </body>
 </html>
