--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>uniteapprn.com</title>
   </head>
   <body>
-    <p>Hey there, I swiped up this domain. As you're probably aware, this domain is the groupId for the Android NZ Covid Tracer app.
+    <p>Hey there, I swiped up this domain. As you're probably aware, this domain is the groupId for the Android NZ Covid Tracer React Native app.
     <p>The code for said app is located <a href="https://github.com/minhealthnz/nzcovidtracer-app">here</a></p>
     <p>This site is hosted on a GitHub repository here: <a href="https://github.com/CyberFlameGO/uniteapprn.com">https://github.com/CyberFlameGO/uniteapprn.com</a>.
   </body>
